# nsight-aftermath-samples

./: README.md
D3D12HelloNsightAftermath/: D3D12HelloNsightAftermath.cpp  D3D12HelloNsightAftermath.h  D3D12HelloNsightAftermath.vcxproj  D3D12HelloNsightAftermath.vcxproj.filters  DXSample.cpp  LICENSE  Main.cpp  NsightAftermath.props  NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h  PixelShader.hlsl  README.md
GpuCrashDump/: D3D12HelloNsightAftermath-12252-1.nv-gpudmp  README.md  shader-59339c1ea8934740-00000210749de540.nvdbg
GpuCrashDump/Extras/Shaders/: PixelShader.cso  VertexShader.cso
GpuCrashDump/Extras/SourceShaders/: Shader.hlsli  VertexShader.hlsl
VkHelloNsightAftermath/: CMakeLists.txt  LICENSE.txt  NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h  README.md  VkHelloNsightAftermath.cpp  checkerboard.ppm.h  cube.comp  cube.frag  cube.vert  nv_device_diagnostics_config_ext.h
VkHelloNsightAftermath/cmake/: FindNsightAftermath.cmake  FindVulkan.cmake  FindVulkanHeaders.cmake  FindWayland.cmake  FindXCB.cmake
